--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
     <body>
         <div id="hypercomments_widget"></div>
         <script src="js/basic-functions.js"></script>
+        <script src="/additory-handler/js/hyper-comments-template.js"></script>
         <script src="js/additory-handler.js"></script>
         <script type="text/javascript">
         _hcwp = window._hcwp || [];
         _hcwp.push({widget:"Stream", widget_id: 98905, title: 'Air.Live', href: 'http://air.yaroslav-samoylov.com/1', pagination: 1, social: "google, facebook, vk, odnoklassniki", callback: function(app, init) {
+            var template = HCtemplate.getIntance();
             var handler = new AdditoryHandler();
+            handler.Template(template);
             handler.Application(app);
             handler.ProductID(571);
             handler.initilize();
